my/target/test/cgdb-scan/2022-04-21-063933-57227-1/failures/clang_other_error_wxdKgY.ii.stderr.txt
test/cc/libevent_hello.cc:2:10: fatal error: 'event.h' file not found
#include <event.h>
         ^~~~~~~~~
1 error generated.
